# betting-odds-backend

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
scripts/: download_model.py  upload_model.py
src/: feature_engineering.py  main.py  train.py  training_data_loader.py
src/models/: __init__.py  constraint_optimizer.py  expected_points.py  feature_engineering.py  ml_model.py  model.py  neg_binomial.py  poisson.py  score_predictor.py
tests/: README.md  evaluate_predictions.py  test_feature_engineering.py  test_training_data_loader.py
tests/evaluation/: aggregated_test_set.csv  evaluation_results.csv  prediction_results.csv  server_prediction_results.csv
